--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 									</a>
 								</div>
 								<div class="iso-box webdev col-md-3 col-sm-3 col-xs-12">
-									<video width="320" height="240" controls source src="images/matager.mp4" type="video/mp4">
+									<a href="images/matager.mp4" data-fancybox data-type="video">
 										<div class="portfolio-thumb">
 											<img src="images/WordPress-Ecommerce-Website-OG.jpg" class="fluid-img" alt="E-Commerce Site"
 												loading="lazy">
@@ -584,5 +584,6 @@
 
 
 </html>
+
 
 
